# llm-meter

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  config.example.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
apps/desktop/src/: app.js  index.html  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/assets/noctalia/: BarWidget.qml  Panel.qml
crates/cli/src/: daemon.rs  main.rs  setup.rs  update.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  pricing.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: alerts.rs  config.rs  ipc.rs  lib.rs  local_codex.rs  notifications.rs  runner.rs  scheduler.rs  snapshot.rs  telemetry.rs
crates/provider-kimi/: Cargo.toml
crates/provider-kimi/src/: lib.rs  subscription.rs
crates/provider-openai/: Cargo.toml
crates/provider-openai/src/: lib.rs  platform.rs  pricing.rs  standard.rs  subscription.rs
crates/provider-relay/: Cargo.toml
crates/provider-relay/src/: lib.rs
crates/provider-testkit/: Cargo.toml
crates/provider-testkit/src/: lib.rs
crates/relay-proxy/: Cargo.toml
crates/relay-proxy/src/: lib.rs
crates/secret-store/: Cargo.toml
crates/secret-store/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/migrations/: 0001_initial.sql  0002_reset_credits.sql  0003_relay_support.sql  0004_proxy_credentials.sql
crates/storage/src/: lib.rs
docs/: README.md  architecture-overview-v0.1.md  desktop-ui-design-v0.1.md  hyprland-integration-v0.1.md  llm-meter-architecture-v0.1.md  llm-meter-relay-provider-design.md
packaging/: README-hyprland.md
packaging/desktop/: io.github.llmmeter.desktop
packaging/hyprland/: llm-meter.conf  llm-meter.lua
packaging/noctalia/llm-meter/: Main.qml  Panel.qml  manifest.json
packaging/systemd/: llm-meter-desktop.service  llm-meterd.service
packaging/waybar/: config.jsonc  llm-meter.css  llm-meter.jsonc  style.css
schemas/: provider-manifest.schema.json
tools/pkgconfig-check/: javascriptcoregtk-4.1.pc  webkit2gtk-4.1.pc
