[package]
name = "llm-meter-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Command-line client and daemon executables for LLM Meter"
[dependencies]
clap.workspace = true
llm-meter-core = { version = "0.1.0", path = "../core" }
llm-meter-daemon = { version = "0.1.0", path = "../daemon" }
llm-meter-secret-store = { version = "0.1.0", path = "../secret-store" }
rpassword.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

[[bin]]
name = "llm-meter"
path = "src/main.rs"

[[bin]]
name = "llm-meterd"
path = "src/daemon.rs"
