[package]
name = "llm-meter-provider-openai"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
rust-version.workspace = true
keywords.workspace = true
categories.workspace = true
description = "OpenAI Platform and ChatGPT subscription adapters for LLM Meter"
[dependencies]
async-trait.workspace = true
chrono.workspace = true
llm-meter-core = { version = "0.1.0", path = "../core" }
reqwest.workspace = true
rust_decimal.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true
